// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayLetterWithNumberActionColumn Component Renders with custom props and matches previous snapshot:  1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "minWidth": 44,
    }
  }
>
  <View
    style={
      {
        "paddingBottom": 10,
        "paddingTop": 5,
      }
    }
  >
    <Text
      accessibilityRole="text"
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 10,
          },
          undefined,
        ]
      }
    >
      M
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "paddingVertical": 6,
          "width": 40,
        },
        {
          "backgroundColor": "#FF382B",
          "borderRadius": 100,
        },
      ]
    }
  >
    <Text
      accessibilityRole="text"
      numberOfLines={1}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
          },
          undefined,
        ]
      }
    >
      22
    </Text>
  </View>
</View>
`;

exports[`DayLetterWithNumberActionColumn Component Renders with default props and matches previous snapshot:  1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "minWidth": 44,
    }
  }
>
  <View
    style={
      {
        "paddingBottom": 10,
        "paddingTop": 5,
      }
    }
  >
    <Text
      accessibilityRole="text"
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 10,
          },
          undefined,
        ]
      }
    >
      M
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "paddingVertical": 6,
          "width": 40,
        },
        {},
      ]
    }
  >
    <Text
      accessibilityRole="text"
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "Inter-Regular",
            "fontSize": 18,
          },
          undefined,
        ]
      }
    >
      05
    </Text>
  </View>
</View>
`;
